--- a/infomapper/src/app/map-components/dialog-content/dialog-content.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-content.component.html
@@ -59,4 +59,34 @@
     <div id="docDiv"></div>
   </div>
 
+  <!-- Show the attribute table for a layer -->
+  <div *ngIf="showAttributeTable" class="tableBox">
+
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Filter by keyword in any column" #input>
+    </mat-form-field>
+
+    <cdk-virtual-scroll-viewport tvsItemSize
+                                  class="wrapper mat-elevation-z2">
+      <table mat-table [dataSource]="attributeTable" class="mat-elevation-z8">
+        <!-- All Columns -->
+        <ng-container *ngFor="let property of attributeTable.data[0].properties | keyvalue;" matColumnDef="{{property.key}}">
+          <th class="mat-table-header" mat-header-cell *matHeaderCellDef> {{property.key}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.properties[property.key]}} </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+        <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+      </table>
+    </cdk-virtual-scroll-viewport>
+    
+
+  </div>
+
 </div>
