--- a/infomapper/src/app/map-components/dialog-content/dialog-content.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-content.component.html
@@ -62,9 +62,13 @@
   <!-- Show the attribute table for a layer -->
   <div *ngIf="showAttributeTable" class="tableBox">
 
+    <h2 class="table-header">
+      {{geoLayerViewName}} Data Table
+    </h2>
+
     <mat-form-field>
       <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Filter by keyword in any column" #input>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Filter by substring in any column" #input>
     </mat-form-field>
 
     <cdk-virtual-scroll-viewport tvsItemSize
@@ -79,7 +83,8 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   
-        <!-- Row shown when there is no matching data. -->
+      <!-- Row shown when there is no matching data. This might only work with Material 10? Does not work on current Material
+      version 9.2.4 -->
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
       </tr>
