--- a/infomapper/src/app/map-components/map.component.css
+++ b/infomapper/src/app/map-components/map.component.css
@@ -3,6 +3,14 @@ body, html {
   background: black;
 }
 
+/* Styles the menu options in the vertical dots menu in the side bar */
+button.mat-menu-item {
+  outline: none;
+  /* Overrides the width of the button in the menu. otherwise the default max-width is quite short, and will cut off
+  even a short name of the button, such as 'Data Table' */
+  width: 160px !important;
+}
+
 /* Changes the amount of pixels surrounding the <hr> divider class that separates each geoLayerView in the side bar */
 hr.divider {
   margin-top: 8px;
@@ -103,6 +111,12 @@ table.layerOptions {
 .card-header-map-controls {
 	background: #9DB66B;
 	font-size: 5px;
+}
+
+/* Styles only the font awesome table in the menu popup when the vertical dots are clicked */
+.fa-table {
+  vertical-align: middle;
+  padding-right: 5%;
 }
 
 /* The style for the <div> that contains both the geoLayerViewGroup name and gear dropdown buttons */
