--- a/infomapper/src/app/map-components/map.component.html
+++ b/infomapper/src/app/map-components/map.component.html
@@ -214,7 +214,7 @@
                           <div class="menu">
 
                             <button mat-icon-button [matMenuTriggerFor]="menuFriend">
-                              <mat-icon>more_vert</mat-icon>
+                              <mat-icon class="dots">more_vert</mat-icon>
                             </button>
                             <mat-menu #menuFriend="matMenu">
                               <button mat-menu-item
@@ -250,7 +250,7 @@
                             <div class="menu">
 
                               <button mat-icon-button [matMenuTriggerFor]="menuAlone">
-                                <mat-icon>more_vert</mat-icon>
+                                <mat-icon class="dots">more_vert</mat-icon>
                               </button>
                               <mat-menu #menuAlone="matMenu">
                                 <button mat-menu-item
