--- a/infomapper/src/app/map-components/dialog-content/dialog-content.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-content.component.html
@@ -71,13 +71,13 @@
       <input matInput (keyup)="applyFilter($event)" placeholder="Filter by substring in any column" #input>
     </mat-form-field>
 
-    <cdk-virtual-scroll-viewport tvsItemSize
-                                  class="wrapper mat-elevation-z2">
+    <cdk-virtual-scroll-viewport tvsItemSize bufferMultiplier="0.7" class="wrapper mat-elevation-z2">
       <table mat-table [dataSource]="attributeTable" class="mat-elevation-z8">
         <!-- All Columns -->
         <ng-container *ngFor="let property of attributeTable.data[0].properties | keyvalue;" matColumnDef="{{property.key}}">
           <th class="mat-table-header" mat-header-cell *matHeaderCellDef> {{property.key}} </th>
-          <td mat-cell *matCellDef="let element"> {{element.properties[property.key]}} </td>
+          <td mat-cell *matCellDef="let element" [ngClass]="determineJustification(element.properties[property.key])">
+            {{element.properties[property.key]}} </td>
         </ng-container>
   
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
