--- a/infomapper/src/app/map-components/dialog-content/dialog-content.component.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-content.component.css
@@ -82,8 +82,11 @@ and the <h1> are sharing the space */
   border-right: 1px;
   border-right-color: rgba(0, 0, 0, 0.25);
   border-right-style: dotted;
+  /* This is needed for the virtual scrolling to handle correctly. Tells the height of each cell in the table
+  to be 48 pixels, which should be the pixels, but for some reason something is overriding it */
+  height: 48px;
   /*      Top Right Bot Left */
-  padding: 6px 8px 6px 8px;
+  padding: 0 8px 0 8px;
   text-align: right;
 }
 
