--- a/infomapper/src/app/map-components/dialog-content/dialog-content.component.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-content.component.css
@@ -129,9 +129,13 @@ and the <h1> are sharing the space */
 
 .table-header {
   font-size: medium;
-  display: inline-block;
   padding-left: 10%;
   text-align: center;
+  width: 100%;
+}
+
+.table-header-div {
+  display: inline-block;
   width: 90%;
 }
 
