--- a/infomapper/src/app/map-components/map.component.html
+++ b/infomapper/src/app/map-components/map.component.html
@@ -314,7 +314,7 @@
                                   <!-- SQUARE -->
                                   <div *ngIf="layerView.geoLayerSymbol.properties.symbolShape.toUpperCase() == 'SQUARE'">
                                     <svg class="layer-icon" width="18" height="18">
-                                      <rect width="17" height="17" [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"/>
+                                      <rect width="18" height="18" [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"/>
                                     </svg>
                                   </div>
                                   <!-- TRIANGLE & TRIANGLE-UP -->
@@ -346,11 +346,9 @@
                                   <div *ngIf="layerView.geoLayerSymbol.properties.symbolShape.toUpperCase() == 'X'">
                                     <svg class="layer-icon" height="18" width="18">
                                       <line x1="0" y1="0" x2="18" y2="18"
-                                            [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"
-                                            style="stroke-width: 2;"/>
+                                            [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"/>
                                       <line x1="18" y1="0" x2="0" y2="18"
-                                            [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"
-                                            style="stroke-width: 2;"/>
+                                            [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"/>
                                     </svg>
                                   </div>
                                 </div>
@@ -359,7 +357,7 @@
                                   layerView.geoLayerSymbol.properties.builtinSymbolImage === undefined &&
                                   !this.getGeometryType(layerView.geoLayerId).toUpperCase().includes('LINESTRING')">
                                     <svg class="layer-icon" width="18" height="18">
-                                      <rect width="17" height="17" [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"/>
+                                      <rect width="18" height="18" [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"/>
                                     </svg>
                                   </div>
                                 </ng-template>
@@ -373,7 +371,7 @@
                                       <!-- SQUARE will be default for polygons -->
                                       <svg class="layer-icon" width="18" height="18">
                                         <rect width="18" height="18"
-                                              [ngStyle]="{'fill': categorizedLayerColor[layerView.geoLayerId][i + 1]}" />
+                                              [ngStyle]="styleObject(categorizedLayerColor[layerView.geoLayerId][i + 1], 'c')"/>
                                       </svg>
                                       {{location}}<br><br>
                                     </div>
