--- a/infomapper/src/app/map-components/dialog-content/dialog-content.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-content.component.html
@@ -37,7 +37,7 @@
   <!-- Show plotly.js by default -->
   <div *ngIf="!chartPackage" class="chartPackage">
     <div *ngIf="showGraph" class="showGraph">
-      <div id="plotlyDiv"></div>
+      <div [attr.id]="graphTemplateObject.product.subProducts[0].data[0].properties.TSID"></div>
     </div>
   </div>
   <!-- Create and display a Chart.js graph if the showGraph Dialog class variable is true -->
@@ -49,7 +49,7 @@
   <!-- Create and display a Plotly graph if the showGraph Dialog class variable is true -->
   <div *ngIf="chartPackage" class="chartPackage">
     <div *ngIf="showGraph && chartPackage.toUpperCase() === 'PLOTLY'" class="showGraph">
-      <div id="plotlyDiv"></div>
+      <div [attr.id]="graphTemplateObject.product.subProducts[0].data[0].properties.TSID"></div>
     </div>
   </div>
   <!-- Show a regular text file if the showText Dialog class variable is true -->
@@ -93,6 +93,7 @@
               *matCellDef="let element; let i = index"
               [ngClass]="determineJustification(element.properties[property.key])"
               [attr.id]="'cell-' + element.properties[property.key]">
+
             {{element.properties[property.key]}}
             <!-- If the property value is a URL, it has already been truncated (as attributeTable is a copy), so below the
             truncated version of the link above, display Link to open up in a new tab -->
@@ -101,10 +102,19 @@
             </div>
             
           </td>
+          <!-- <td mat-footer-cell *matFooterCellDef> </td> -->
         </ng-container>
+        <!-- TODO: jpkeahey 2020.09.14 - The above line and below lines add a footer in the attribute table for saving the
+        table as a CSV file. This is a WIP -->
+        <!-- <ng-container matColumnDef="footer">
+          <td mat-footer-cell *matFooterCellDef [attr.colspan]="footerColSpan">
+            <button mat-button class="save-csv">Save Table as CSV</button>
+          </td>
+        </ng-container> -->
   
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <!-- <tr mat-footer-row *matFooterRowDef="['footer']; sticky: true"></tr> -->
   
         <!-- Row shown when there is no matching data. This might only work with Material 10? Does not work on current Material
         version 9.2.4 -->
